--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-10 00:08:59
 
 [search]
-lastsearch = 2024-07-24 00:30:47
+lastsearch = 2024-07-24 06:50:35
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -12,19 +12,19 @@ title = [CHUYÊN SỈ]🌺 chăn băng lông tuyết nhung, ...
 url = https://h5.lazada.vn/products/chuyen-si-chan-bang-long-tuyet-nhung-chan-tuyet-sin-thai-lan-cho-mua-dong-am-ap-loai-3kg4kg5kg-i2100867387.html
 
 [shopee.vn]
-match = 0.0%%
-title = CHĂN LÔNG TUYẾT SỊN THÁI LAN 3KG HAI LỚP IN HOA ...
-url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-SỊN-THÁI-LAN-3KG-HAI-LỚP-IN-HOA-CAO-CẤP-i.169744499.6052072833
+match = 7.4%%
+title = CHĂN LÔNG TUYẾT NHUNG CAO CẤP Thái Lan Loại 4kg
+url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-NHUNG-CAO-CẤP-Thái-Lan-Loại-4kg-i.126028938.4857799045
 
 [www.lazada.vn]
-match = 3.7%%
-title = Chăn Tuyết Nhung 5kg Giá Tốt T05/2024
-url = https://www.lazada.vn/tag/chan-tuyet-nhung-5kg/
+match = 22.2%%
+title = Chăn Lông Tuyết 5kg Giá Tốt T07/2024
+url = https://www.lazada.vn/tag/chan-long-tuyet-5kg/
 
 [tiki.vn]
-match = -33.3%%
-title = Chăn băng lông tuyết nhung Thái siêu ấm xịn xò 3kg 4kg 5kg
-url = https://tiki.vn/chan-bang-long-tuyet-nhung-thai-sieu-am-xin-xo-3kg-4kg-5kg-p217888745.html
+match = -3.7%%
+title = Chăn tuyết nhung hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chăn tuyết nhung
 
 [demxanh.com]
 match = 33.3%%
