--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-24 06:31:59
+lastsearch = 2024-07-24 06:52:25
 
 [www.instagram.com]
-match = -161.5%%
-title = (@katrinacyt) • Instagram photos and videos
-url = https://www.instagram.com/katrinacyt/
+match = -123.1%%
+title = Chan Dior Sunshade (@chan_dior_sunshade)
+url = https://www.instagram.com/chan_dior_sunshade/
 
 [hk.linkedin.com]
 match = -276.9%%
@@ -302,8 +302,8 @@ title = Hoi Yi Chan's Reviews on Carousell Hong Kong
 url = https://www.carousell.sg/u/justforu.shop/reviews/
 
 [www.bbc.com]
-match = -230.8%%
-title = South Korea: First lady's Dior bag shakes ... - BBC
+match = -261.5%%
+title = South Korea: First lady's Dior bag shakes country's ...
 url = https://www.bbc.com/news/world-asia-68090638
 
 [www.straitstimes.com]
@@ -320,4 +320,9 @@ url = https://www.lofficielmalaysia.com/fashion/dior-unveiled-the-lady-dior-cele
 match = 0.0%%
 title = 
 url = https://www.npr.org/2024/01/30/1227831327/luxury-dior-handbag-south-korea-politics
+
+[huntvintage.co]
+match = -253.8%%
+title = Pair of Boxer Lounge Chairs By Kwok Hoi Chan for Steiner
+url = https://huntvintage.co/seating/lounge-chairs/pair-of-boxer-lounge-chairs-by-kwok-hoi-chan-for-steiner
 
