--- a/images/chieu-truc-cong-ty-16-19/config.ini
+++ b/images/chieu-truc-cong-ty-16-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-19.html
 lastopen = 2024-06-07 00:18:26
 
 [search]
-lastsearch = 2024-07-24 05:16:58
+lastsearch = 2024-07-24 06:44:29
 
 [chieutrelanlan.com]
 match = -37.5%%
@@ -39,12 +39,12 @@ url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/cung-cap-chieu-truc-quan-p
 [www.lazada.vn]
 match = -62.5%%
 title = chiếu tre 1,6*2m Trúc Linh hàng Việt Nam cao cấp siêu rẻ
-url = https://www.lazada.vn/products/chieu-truc-chieu-tre-162m-truc-linh-hang-viet-nam-cao-cap-sieu-re-i270802405.html?srsltid=AfmBOoqCXgfhFTID86UUmbeF084yZTR6rDOf_IBF4cNS7hcPWCpgiKM7
+url = https://www.lazada.vn/products/chieu-truc-chieu-tre-162m-truc-linh-hang-viet-nam-cao-cap-sieu-re-i270802405.html
 
 [demxanh.com]
 match = -54.2%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOopAK1wgbo4UG_5aDg8s23aZFoqbDSUyoslLVmwgClc5Fpk03MLx
+url = https://demxanh.com/chieu-truc.html
 
 [www.youtube.com]
 match = 25.0%%
