--- a/images/chieu-truc-que-lam-loai-1-16-20/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 lastopen = 2024-06-09 23:23:20
 
 [search]
-lastsearch = 2024-07-24 05:16:46
+lastsearch = 2024-07-24 06:46:56
 
 [thegioidemviet.vn]
 match = 38.7%%
@@ -47,9 +47,9 @@ title = Chiếu trúc quế lâm loại 1 16 20
 url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 
 [www.facebook.com]
-match = 66.7%%
-title = Chiếu Trúc Quế Lâm | Hai Phong
-url = https://www.facebook.com/ChieuTrucQueLam/
+match = -31.6%%
+title = Thế Giới Chiếu Trúc
+url = https://www.facebook.com/thegioichieutruc/
 
 [www.dienmayxanh.com]
 match = -29.0%%
