--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-07-24 06:33:03
+lastsearch = 2024-07-24 06:50:26
 
 [burningman.org]
 match = 0.0%%
@@ -82,8 +82,8 @@ title = Bulova Official Site | Bulova
 url = https://www.bulova.com/us/en/
 
 [www.ksat.com]
-match = -233.3%%
-title = San Antonio News, Texas News, Sports, Weather from KSAT ...
+match = -57.1%%
+title = KSAT 12
 url = https://www.ksat.com/
 
 [marijuana-anonymous.org]
@@ -1025,4 +1025,9 @@ url = https://www.fashionsquare.com/
 match = -40.0%%
 title = ACX Cinema | Movie Theater
 url = https://www.acxcinemas.com/
+
+[www.cnn.com]
+match = -180.0%%
+title = Who are the Houthis and why are they attacking ships?
+url = https://www.cnn.com/2023/12/19/middleeast/red-sea-crisis-explainer-houthi-yemen-israel-intl/index.html
 
