--- a/images/bo-ga-goi-chun-xoa-16/config.ini
+++ b/images/bo-ga-goi-chun-xoa-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-16.html
 lastopen = 2024-06-09 23:12:29
 
 [search]
-lastsearch = 2024-07-24 05:35:42
+lastsearch = 2024-07-24 10:44:29
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -27,9 +27,9 @@ title = Bộ ga chun Velina V16 - Forever Bedding
 url = https://foreverbedding.net/bo-ga-chun-velina-v16
 
 [changagoidemsonghong.com]
-match = -19.0%%
-title = Chăn ga gối 100%% cotton mã mầu BC22-060
-url = https://changagoidemsonghong.com/chan-ga-goi-bc60
+match = -23.8%%
+title = Bộ chăn ga gối 100%% cotton mã mầu BC22-061
+url = https://changagoidemsonghong.com/chan-ga-goi-bc61
 
 [everonletrongtan.com]
 match = 19.0%%
@@ -57,9 +57,9 @@ title = [giá hủy diệt]Bộ ga gối bo chun bọc đệm,vải cotton poly 
 url = https://shopee.vn/-giá-hủy-diệt-Bộ-ga-gối-bo-chun-bọc-đệm-vải-cotton-poly-chọn-nhiều-mẫu-tam-giác-ghi--i.703206422.11490325681
 
 [runa.vn]
-match = -23.8%%
-title = Bộ Chăn Ga Gối Satin Cotton Màu Chocolate
-url = https://runa.vn/bo-chan-ga-goi-satin-cotton-mau-beige
+match = -4.8%%
+title = Bộ Chăn Ga Gối Satin Cotton Màu Wheat
+url = https://runa.vn/bo-chan-ga-goi-satin-cotton-mau-wheat
 
 [hoangkimhome.com]
 match = -90.5%%
