--- a/images/tam-trai-ks/config.ini
+++ b/images/tam-trai-ks/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks.html
 lastopen = 2024-06-07 00:26:12
 
 [search]
-lastsearch = 2024-07-24 10:37:09
+lastsearch = 2024-07-24 11:17:04
 
 [www.linkedin.com]
 match = -145.5%%
@@ -27,8 +27,8 @@ title = Tam Thi Tran Obituary - Wichita, KS
 url = https://www.dignitymemorial.com/obituaries/wichita-ks/tam-tran-9902717
 
 [www.facebook.com]
-match = -227.3%%
-title = Eat Healthier and more Economically - Salina
+match = -354.5%%
+title = Eat Healthier and more Economically | Kansas | March is ...
 url = https://www.facebook.com/SalinaRegionalHealthCenter/videos/eat-healthier-and-more-economically/859948698432933/
 
 [www.hoteljob.vn]
@@ -67,9 +67,9 @@ title = Mt Tam Trail Map, (Mount Tamalpais State Park) California ...
 url = https://www.ebay.com/itm/234042671995
 
 [www.runguides.com]
-match = -181.8%%
-title = 2024 Peacock Gap Trail Run | San Rafael
-url = https://www.runguides.com/event/3294/peacock-gap-trail-run
+match = -145.5%%
+title = 2024 Mt. Tam Trail Run | Mill Valley
+url = https://www.runguides.com/event/4688/mt-tam-trail-run
 
 [www.kategridley.com]
 match = -125.0%%
