--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-07-24 04:18:31
+lastsearch = 2024-07-24 11:16:46
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -445,4 +445,9 @@ url = https://www.ch-aviation.com/news/139065-tui-group-set-to-end-b737-700-ops-
 match = -308.3%%
 title = TUI Trains Eye on Transition to Boeing 737 Max and 787 ...
 url = https://www.ainonline.com/aviation-news/air-transport/2023-01-17/tui-trains-eye-transition-boeing-737-max-and-787-fleets
+
+[gy.linkedin.com]
+match = -200.0%%
+title = TUI
+url = https://gy.linkedin.com/company/tuigroup?trk=products_details_guest_organization_name
 
