--- a/images/chieu-cay-cao-bang-lua-18/config.ini
+++ b/images/chieu-cay-cao-bang-lua-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-18.html
 lastopen = 2024-06-09 22:41:28
 
 [search]
-lastsearch = 2024-07-24 11:33:10
+lastsearch = 2024-07-24 11:46:55
 
 [chieutruc.info]
 match = -60.0%%
@@ -17,9 +17,9 @@ title = Bảng giá chiếu trúc Cao Bằng Tây Bắc mới nhất 2021
 url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html
 
 [shopee.vn]
-match = -48.0%%
-title = Chiếu trúc thanh Cao Bằng in hoa, 4 loại kích cỡ chiều ...
-url = https://shopee.vn/Chiếu-trúc-thanh-Cao-Bằng-in-hoa-4-loại-kích-cỡ-chiều-ngang-1.8m-1.6m-1.5m-và-1.2m-i.17414239.2725505616
+match = -64.0%%
+title = Chiếu trúc cao bằng - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/chiếu/trúc/cao bằng
 
 [suongtuyet.com]
 match = 60.0%%
@@ -32,9 +32,9 @@ title = "Trùm Gọi Vốn” Ở Cao Bằng Lừa Đảo Hơn 18 Tỷ Đồng |
 url = https://www.youtube.com/watch?v=NN5iWnFFa6Y
 
 [chieutrucsaigon.com]
-match = -4.0%%
-title = CHIẾU TRÚC CAO BẰNG CHÍNH HÃNG ĐƯỢC BÁN Ở ...
-url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-cao-bang-chinh-hang-duoc-ban-o-dau-71.html
+match = 44.0%%
+title = CHIẾU TRÚC THANH CAO BẰNG 1M8X2M
+url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m8x2m.html
 
 [hanggiadunghatinh.com]
 match = 40.0%%
