--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-07-24 06:50:04
+lastsearch = 2024-07-24 11:45:30
 
 [www.diepxuan.com]
 match = -6.7%%
@@ -12,9 +12,9 @@ title = Điệp Xuân Chiếu cây HT 160x200
 url = https://www.diepxuan.com/chieu-cay-ht-160x200.html
 
 [shopee.vn]
-match = -6.7%%
-title = chiếu trúc tăm hương trúc ht
-url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
+match = -40.0%%
+title = chiếu trúc tăm HT cao cấp 2mx2.2m
+url = https://shopee.vn/chiếu-trúc-tăm-HT-cao-cấp-2mx2.2m-i.68883759.22469028239
 
 [www.htv.com.vn]
 match = -106.7%%
@@ -32,9 +32,9 @@ title = Trung tâm thiết bị chiếu sáng - HT Lighting | Da Nang
 url = https://www.facebook.com/trungtamthietbichieusanghtlighting/
 
 [hatari.com.vn]
-match = -13.3%%
-title = Quạt lửng Hatari HT-S14M3
-url = https://hatari.com.vn/san-pham/quat-lung-hatari-ht-s14m3
+match = -126.7%%
+title = Quạt lửng Hatari HT- S16M7 - hatari.com.vn
+url = https://hatari.com.vn/san-pham/quat-lung-hatari-ht-s16m7
 
 [www.htlightlevel.vn]
 match = -153.3%%
