--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-07-24 02:16:31
+lastsearch = 2024-07-24 11:50:23
 
 [dongagroup.vn]
 match = -272.7%%
@@ -27,9 +27,9 @@ title = Giuonggaphoaphat.com
 url = http://giuonggaphoaphat.com/
 
 [tunhuamiennam.com]
-match = -172.7%%
-title = giường nhựa cứng ecoplast cao cấp gec60
-url = https://tunhuamiennam.com/san-pham/giuong-nhua-cung-ecoplast-cao-cap-gec60-2/
+match = -245.5%%
+title = giường liền tủ nhựa cứng ecoplast cao cấp gec30
+url = https://tunhuamiennam.com/san-pham/giuong-lien-tu-nhua-cung-ecoplast-cao-cap-gec30/
 
 [giuongtang.mov.mn]
 match = -200.0%%
@@ -59,7 +59,7 @@ url = https://shopdogothachthat.com/m/64/174/Combo-giuong-tu-2m
 [ifurni.vn]
 match = 0.0%%
 title = Giường bọc nệm HELEN 2
-url = https://ifurni.vn/san-pham/giuong-eda-1564.html
+url = https://ifurni.vn/san-pham/giuong-boc-nem-eda-1564.html
 
 [shopee.vn]
 match = -263.6%%
