--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-07-24 06:53:17
+lastsearch = 2024-07-24 11:48:09
 
 [m.youtube.com]
 match = -144.4%%
@@ -32,9 +32,9 @@ title = Nem Nướng Siêu To Khổng Lồ Siêu Ngon #ancungtiktok ...
 url = https://www.tiktok.com/@thenguyen_kitchen/video/7139504048713010458
 
 [www.youtube.com]
-match = -133.3%%
-title = Cách làm NEM CÔNG CHẢ PHƯỢNG đón Tết cực dễ, cực ...
-url = https://www.youtube.com/watch?v=aDzQbk-eQvQ
+match = -144.4%%
+title = Chuẩn VỊ NEM NƯỚNG, Bí quyết làm Nem Nướng Viên dai ...
+url = https://www.youtube.com/watch?v=C58Hlp6UXfQ
 
 [www.grab.com]
 match = -116.7%%
@@ -44,7 +44,7 @@ url = https://www.grab.com/vn/en/food-blog/trending-food/tphcm-bun-nem-nuong-sie
 [www.diepxuan.com]
 match = 11.1%%
 title = Điệp Xuân Nệm siêu nhẹ
-url = https://www.diepxuan.com/nem-sieu-nhe.html
+url = https://www.diepxuan.com/nem-sieu-nhe.html?srsltid=AfmBOorM2XjTMXeL_5wyF9sQJ9lCFAXEruOHXCNxtRAlcgRdCbB9-zPH
 
 [shopcamping.vn]
 match = -144.4%%
@@ -72,9 +72,9 @@ title = U.S. DEPARTMENT OF COMMERCE National Technical ...
 url = https://www.ojp.gov/pdffiles1/Photocopy/93776NCJRS.pdf
 
 [m.facebook.com]
-match = -177.8%%
-title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai
-url = https://m.facebook.com/amthucduongpho247/videos/thấy-thương-chị-gái-bán-nem-nướng-thật-thà-hỏi-gì-cũng-khai-atdp/629711951714693/
+match = -77.8%%
+title = Cộng Đồng Người Việt Denver | 👉♥️Nem chua bò
+url = https://m.facebook.com/groups/2078029092481022/posts/3794938424123405/
 
 [www.proz.com]
 match = -183.3%%
