--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-07-24 09:10:06
+lastsearch = 2024-07-24 12:44:56
 
 [shopee.vn]
 match = -94.7%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ có viền màu nâu đen Size: 1m6x1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-co-vien-mau-nau-1m6-88.html
 
 [www.youtube.com]
-match = -78.9%%
-title = Những Bài Hát Thiếu Nhi Vui Nhộn Bé Yêu Thích
-url = https://www.youtube.com/watch?v=lxRkWryCSXU
+match = -136.8%%
+title = Cô Dạy Em Tập Thể Dục Buối Sáng - Nhạc Thiếu Nhi Sôi ...
+url = https://www.youtube.com/watch?v=6w-QNggXsJg
 
 [dochoihoangthu.com]
 match = -121.1%%
@@ -62,9 +62,9 @@ title = CHIẾU TRE , CHIẾU TRÚC MẮT NHỎ HẠT VÀNG DÒNG ...
 url = https://www.lazada.vn/products/chieu-tre-chieu-truc-mat-nho-hat-vang-dong-cao-cap-du-kich-thuoc-i251143269.html
 
 [tiki.vn]
-match = -142.1%%
-title = Đồ Chơi Trẻ Em Thông Minh HT SYS - Giúp Tư Duy ... - Tiki
-url = https://tiki.vn/do-choi-tre-em-ht-sys-bo-do-choi-lap-ghep-ky-su-bang-oc-nhua-tang-kem-khoan-do-choi-tre-em-thong-minh-ht-sys-giup-tu-duy-sang-tao-giao-duc-cho-be-hang-chinh-hang-p275587203.html
+match = -126.3%%
+title = Mua Đồ Chơi Trẻ Em HT SYS - Bộ Đồ Chơi Lắp Ghép Kỹ ...
+url = https://tiki.vn/do-choi-tre-em-ht-sys-bo-do-choi-lap-ghep-ky-su-bang-oc-nhua-tang-kem-khoan-do-choi-tre-em-thong-minh-ht-sys-giup-tu-duy-sang-tao-giao-duc-cho-be-hang-chinh-hang-p253468081.html
 
 [khodem.vn]
 match = 31.6%%
