--- a/images/chieu-truc-cong-ty-14/config.ini
+++ b/images/chieu-truc-cong-ty-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-14.html
 lastopen = 2024-06-09 23:39:55
 
 [search]
-lastsearch = 2024-07-24 06:36:53
+lastsearch = 2024-07-24 12:44:14
 
 [chieutrucsaigon.com]
 match = 0.0%%
@@ -19,7 +19,7 @@ url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-trang-16
 [nemsaithanh.com]
 match = -10.0%%
 title = Chiếu Trúc
-url = https://nemsaithanh.com/san-pham/chieu-truc-135.html
+url = https://nemsaithanh.com/chieu-truc-103.html
 
 [trangvangvietnam.com]
 match = -61.9%%
@@ -32,14 +32,14 @@ title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
 url = https://demxanh.com/chieu-truc.html
 
 [vongxepsaigon.vn]
-match = -76.2%%
-title = Chiếu trúc chiếu tre hạt vàng trắng loại 1 hàng tốt 140cm
-url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-vang-trang-loai-1-hang-tot-140cm/
+match = -52.4%%
+title = Chiếu trúc giá rẻ có viền cao cấp loại tốt size 1m4
+url = https://vongxepsaigon.vn/san-pham/chieu-truc-gia-re-co-vien-cao-cap-loai-tot-size-1m4/
 
 [thegioichieutruc.com]
-match = 52.6%%
-title = Chiếu trúc Thanh Kẻ
-url = https://thegioichieutruc.com/chieu-truc-thanh-ke/
+match = -47.6%%
+title = Phân phối chiếu trúc Việt Nam giá rẻ tại Hà Nội
+url = https://thegioichieutruc.com/
 
 [www.facebook.com]
 match = 50.0%%
