--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-07-23 22:36:19
+lastsearch = 2024-07-24 12:48:13
 
 [demxanh.com]
-match = -42.9%%
-title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 11
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-11.html
+match = -7.1%%
+title = Bộ ga chun Cotton chống thấm màu xanh ngọc
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-ngoc.html
 
 [www.diepxuan.com]
-match = -10.7%%
-title = Bộ ga chun THHome Tencel Micro 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-ga-chun-thhome-tencel-micro-180x200.html
+match = 10.7%%
+title = Bộ ga chun chần MC20208 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/bo-ga-chun-chan-mc20208-180x200.html
 
 [mgaleg.maryland.gov]
 match = -75.0%%
